src/test/deca/test_compilateur/context/invalid/created/decl_class/decl_class_comme_void.deca
// Description :
//    new utilisé avec un identificateur void
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 :(3.42) void n'est pas un type de classe

{
int b = new void();
}